# HW7_SQLAlchemy

./: config.ini  pyproject.toml  query.py  seeds.py
database/: conn_to_db.py  models.py
migrations/: env.py
migrations/versions/: 9eb19fb659d9_init.py
